mightve fixed the website being stuck loading

--- a/menu.css
+++ b/menu.css
@@ -214,7 +214,7 @@ nav{
 }
 
 .mipibg {
-    background-image: url(stuf/mipi.webp) !important;
+    background-image: url(stuf/mipi.png) !important;
 }
 
 .banner-card:nth-child(1) {
